--- a/resources/css/components/_fieldset.scss
+++ b/resources/css/components/_fieldset.scss
@@ -31,6 +31,10 @@
     }
 }
 
+.fieldset-item.has-nested-error {
+    border: 1px solid #e74c3c;
+}
+
 // ============================================
 // FIELDSET ACTION BAR
 // ============================================
