--- a/resources/css/components/_fieldset-cards.scss
+++ b/resources/css/components/_fieldset-cards.scss
@@ -186,6 +186,27 @@
 }
 
 // ============================================
+// ORDER NUMBER CIRCLE - Same as media-order
+// ============================================
+
+.fieldset-item-order {
+    align-items: center;
+    background-color: #0cb7e0;
+    border-radius: 50%;
+    color: #fefefe;
+    display: flex;
+    font-size: 10px;
+    height: 20px;
+    justify-content: center;
+    left: -7px;
+    position: absolute;
+    top: -7px;
+    width: 20px;
+    z-index: 1;
+    font-weight: 600;
+}
+
+// ============================================
 // HIDDEN FORM FIELDS
 // ============================================
 
