--- a/resources/css/components/forms/_toggle-bootstrap.scss
+++ b/resources/css/components/forms/_toggle-bootstrap.scss
@@ -1,17 +1,17 @@
 // ============================================
-// BOOTSTRAP TOGGLE v2.2.0 - Exact CSS
-// Based on bootstrap-toggle.css
+// BOOTSTRAP TOGGLE v2.2.0 - Custom styled
+// Without Bootstrap btn dependencies
 // ============================================
-
-.checkbox label .toggle,
-.checkbox-inline .toggle {
-    margin-left: -20px;
-    margin-right: 5px;
-}
 
 .toggle {
     overflow: hidden;
     position: relative;
+    display: inline-block;
+    min-height: 34px;
+    min-width: 59px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 
     input[type="checkbox"] {
         display: none;
@@ -28,6 +28,8 @@
     -moz-user-select: none;
     -webkit-user-select: none;
     width: 200%;
+    display: flex;
+    height: 100%;
 }
 
 .toggle.off .toggle-group {
@@ -37,6 +39,7 @@
 .toggle-on {
     left: 0;
     right: 50%;
+    flex: 1;
 }
 
 .toggle-off,
@@ -47,6 +50,26 @@
     margin: 0;
     position: absolute;
     top: 0;
+    padding: 6px 12px;
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 1.5;
+    text-align: center;
+    cursor: pointer;
+    user-select: none;
+    color: #666;
+    background-color: #fff;
+    transition: background-color 0.15s ease-in-out;
+
+    &:hover {
+        background-color: #f5f5f5;
+    }
+
+    &.active {
+        background-color: var(--ave-color-primary, #0cb7e0);
+        color: #fff;
+        font-weight: 600;
+    }
 }
 
 .toggle-off {
@@ -54,8 +77,14 @@
     right: 0;
 }
 
+.toggle-on {
+    left: 0;
+    right: 50%;
+}
+
 .toggle-handle {
-    border-width: 0 1px;
+    border-left: 1px solid #ccc;
+    border-right: 1px solid #ccc;
     height: 100%;
     margin: 0 auto;
     padding-bottom: 0;
@@ -64,71 +93,48 @@
     width: 0;
 }
 
-.toggle.btn {
-    min-height: 34px;
-    min-width: 59px;
-}
-
-.toggle-on.btn {
-    padding-right: 24px;
-}
-
-.toggle-off.btn {
-    padding-left: 24px;
-}
-
 // Large size
-.btn-group-lg > .toggle.btn,
-.toggle.btn-lg {
+.toggle.toggle-lg {
     min-height: 45px;
     min-width: 79px;
-}
 
-.btn-group-lg > .toggle-on.btn,
-.toggle-on.btn-lg {
-    padding-right: 31px;
-}
+    .toggle-on {
+        padding-right: 31px;
+    }
 
-.btn-group-lg > .toggle-off.btn,
-.toggle-off.btn-lg {
-    padding-left: 31px;
-}
+    .toggle-off {
+        padding-left: 31px;
+    }
 
-.btn-group-lg > .toggle-handle.btn,
-.toggle-handle.btn-lg {
-    width: 40px;
+    .toggle-handle {
+        width: 40px;
+    }
 }
 
 // Small size
-.btn-group-sm > .toggle.btn,
-.toggle.btn-sm {
+.toggle.toggle-sm {
     min-height: 30px;
     min-width: 50px;
-}
 
-.btn-group-sm > .toggle-on.btn,
-.toggle-on.btn-sm {
-    padding-right: 20px;
-}
+    .toggle-on {
+        padding-right: 20px;
+    }
 
-.btn-group-sm > .toggle-off.btn,
-.toggle-off.btn-sm {
-    padding-left: 20px;
+    .toggle-off {
+        padding-left: 20px;
+    }
 }
 
 // Extra small size
-.btn-group-xs > .toggle.btn,
-.toggle.btn-xs {
+.toggle.toggle-xs {
     min-height: 22px;
     min-width: 35px;
-}
 
-.btn-group-xs > .toggle-on.btn,
-.toggle-on.btn-xs {
-    padding-right: 12px;
-}
+    .toggle-on {
+        padding-right: 12px;
+    }
 
-.btn-group-xs > .toggle-off.btn,
-.toggle-off.btn-xs {
-    padding-left: 12px;
+    .toggle-off {
+        padding-left: 12px;
+    }
 }
