--- a/resources/css/components/forms/_toggle-bootstrap.scss
+++ b/resources/css/components/forms/_toggle-bootstrap.scss
@@ -36,20 +36,11 @@
     left: -100%;
 }
 
-.toggle-on {
-    left: 0;
-    right: 50%;
-    flex: 1;
-}
-
 .toggle-off,
 .toggle-on {
     border: 0;
     border-radius: 0;
-    bottom: 0;
     margin: 0;
-    position: absolute;
-    top: 0;
     padding: 6px 12px;
     font-size: 13px;
     font-weight: 500;
@@ -60,6 +51,10 @@
     color: #666;
     background-color: #fff;
     transition: background-color 0.15s ease-in-out;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &:hover {
         background-color: #f5f5f5;
@@ -70,16 +65,6 @@
         color: #fff;
         font-weight: 600;
     }
-}
-
-.toggle-off {
-    left: 50%;
-    right: 0;
-}
-
-.toggle-on {
-    left: 0;
-    right: 50%;
 }
 
 .toggle-handle {
@@ -98,14 +83,6 @@
     min-height: 45px;
     min-width: 79px;
 
-    .toggle-on {
-        padding-right: 31px;
-    }
-
-    .toggle-off {
-        padding-left: 31px;
-    }
-
     .toggle-handle {
         width: 40px;
     }
@@ -115,26 +92,10 @@
 .toggle.toggle-sm {
     min-height: 30px;
     min-width: 50px;
-
-    .toggle-on {
-        padding-right: 20px;
-    }
-
-    .toggle-off {
-        padding-left: 20px;
-    }
 }
 
 // Extra small size
 .toggle.toggle-xs {
     min-height: 22px;
     min-width: 35px;
-
-    .toggle-on {
-        padding-right: 12px;
-    }
-
-    .toggle-off {
-        padding-left: 12px;
-    }
 }
