--- a/resources/css/components/forms/_toggle-bootstrap.scss
+++ b/resources/css/components/forms/_toggle-bootstrap.scss
@@ -12,6 +12,8 @@
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 4px;
+    cursor: pointer;
+    pointer-events: auto;
 
     input[type="checkbox"] {
         display: none;
@@ -30,6 +32,7 @@
     width: 200%;
     display: flex;
     height: 100%;
+    pointer-events: none;
 }
 
 .toggle.off .toggle-group {
@@ -46,7 +49,6 @@
     font-weight: 500;
     line-height: 1.5;
     text-align: center;
-    cursor: pointer;
     user-select: none;
     color: #666;
     background-color: #fff;
