--- a/resources/css/components/forms/_toggle-bootstrap.scss
+++ b/resources/css/components/forms/_toggle-bootstrap.scss
@@ -57,6 +57,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    pointer-events: none;
 
     &:hover {
         background-color: #f5f5f5;
@@ -78,6 +79,7 @@
     padding-top: 0;
     position: relative;
     width: 0;
+    pointer-events: none;
 }
 
 // Large size
