--- a/resources/css/components/forms/_toggle-bootstrap.scss
+++ b/resources/css/components/forms/_toggle-bootstrap.scss
@@ -3,17 +3,27 @@
 // Without Bootstrap btn dependencies
 // ============================================
 
+.toggle-wrapper {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.toggle-wrapper label {
+    margin-bottom: 0;
+    max-width: none;
+}
+
 .toggle {
     overflow: hidden;
     position: relative;
     display: inline-block;
     min-height: 34px;
-    min-width: 59px;
+    min-width: 60px;
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 4px;
     cursor: pointer;
-    pointer-events: auto;
 
     input[type="checkbox"] {
         display: none;
@@ -21,18 +31,14 @@
 }
 
 .toggle-group {
-    bottom: 0;
-    left: 0;
+    display: flex;
     position: absolute;
     top: 0;
-    transition: left 0.35s;
-    -webkit-transition: left 0.35s;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    width: 200%;
-    display: flex;
-    height: 100%;
+    left: 0;
+    bottom: 0;
+    right: 0;
     pointer-events: none;
+    transition: left 0.35s;
 }
 
 .toggle.off .toggle-group {
@@ -41,6 +47,9 @@
 
 .toggle-off,
 .toggle-on {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: 0;
     border-radius: 0;
     margin: 0;
@@ -53,10 +62,6 @@
     color: #666;
     background-color: #fff;
     transition: background-color 0.15s ease-in-out;
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     pointer-events: none;
 
     &:hover {
