--- a/resources/css/content/_resource-pages.scss
+++ b/resources/css/content/_resource-pages.scss
@@ -148,6 +148,10 @@
 }
 
 .resource-pagination {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
     margin-top: 20px;
 }
 
