--- a/resources/css/content/_tables.scss
+++ b/resources/css/content/_tables.scss
@@ -24,8 +24,8 @@
     color: #777;
     background-color: #efefef; /* Header background color */
     border-bottom: 1px solid #ddd; /* Horizontal divider */
-    padding-top: 1rem;
-    padding-bottom: 1rem; /* Smaller header height */
+    padding-top: .5rem;
+    padding-bottom: .5rem; /* Smaller header height */
     text-transform: uppercase;
     font-size: 10px; /* Header font size */
 }
