--- a/resources/css/components/_tree-view.scss
+++ b/resources/css/components/_tree-view.scss
@@ -15,23 +15,23 @@
     // Nested lists get left padding
     .tree-list {
         padding-left: 2rem;
-        margin-top: 0.5rem;
+        margin-top: 0.25rem;
     }
 }
 
 .tree-item {
     display: block;
     position: relative;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.25rem;
 }
 
 .dd-handle {
     display: flex;
     align-items: center;
     gap: 0.75rem;
-    padding: 0.75rem;
-    background: #fff;
-    border: 1px solid #e5e7eb;
+    padding: 0.55rem;
+    background: #f7f7f7;
+    border: 1px solid #d5d5d5;
     border-radius: 0.5rem;
     transition: all 0.2s ease;
     min-height: 3rem;
@@ -64,9 +64,9 @@
     &::after {
         content: '';
         position: absolute;
-        width: 3px;
-        height: 3px;
-        background: #9ca3af;
+        width: 2px;
+        height: 2px;
+        background: #111;
         border-radius: 50%;
     }
 
@@ -74,16 +74,16 @@
         left: 5px;
         top: 4px;
         box-shadow:
-            0 6px 0 0 #9ca3af,
-            0 12px 0 0 #9ca3af;
+            0 6px 0 0 #111,
+            0 12px 0 0 #111;
     }
 
     &::after {
         right: 5px;
         top: 4px;
         box-shadow:
-            0 6px 0 0 #9ca3af,
-            0 12px 0 0 #9ca3af;
+            0 6px 0 0 #111,
+            0 12px 0 0 #111;
     }
 
     &:hover {
@@ -119,8 +119,9 @@
 }
 
 .tree-item-label {
+    font-size: 14px;
     font-weight: 500;
-    color: #3a4655;
+    color: #151515;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
